GitVersion1/objects/CDH_Territory__c.object
<CustomObject>
    <description>To be Removed - Used to align external territories with records in SFDC</description>
    <fields>
        <fullName>CDH_Business_Unit__c</fullName>
        <description>Business Unit / Country of the territory (allows the same territory name / number to be used by different BU&apos;s</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_CAN_Business__c</fullName>
        <description>Business Unit / Country of the territory (allows the same territory name / number to be used by different BU&apos;s</description>
        <label>CAN Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>CFN</fullName>
                </value>
                <value>
                    <fullName>CPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_External_Territory_ID__c</fullName>
        <description>Stores external ID for territory</description>
        <externalId>true</externalId>
        <label>External Territory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDH_Territory_Name__c</fullName>
        <description>Territory Name / Description</description>
        <label>Territory Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Territory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Territory to a specific user to model the external territory model</description>
        <label>Territory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDH_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Active_User__c</fullName>
        <description>For list view to quickly find out which territories has outdated assigned user. All users should be Active only.</description>
        <formula>Owner:User.IsActive</formula>
        <label>Is Owner Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Formula__c</fullName>
        <formula>CDH_Territory_Owner__r.FirstName + &apos; &apos; + CDH_Territory_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Full_Name__c</fullName>
        <label>Territory Owner Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CDH Territory - To be Removed</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Primary__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>Territory_Owner_Full_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_Business_Unit__c</columns>
        <columns>CDH_CAN_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Poland</fullName>
        <columns>NAME</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Primary__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>Is_Owner_Active_User__c</columns>
        <columns>Territory_Owner_Full_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDH_Business__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <label>All Poland</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Poland_Inactive_Users_only</fullName>
        <columns>NAME</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Primary__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>Is_Owner_Active_User__c</columns>
        <columns>Territory_Owner_Full_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDH_Business__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <filters>
            <field>Is_Owner_Active_User__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Poland Inactive Users only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Poland_Primary_only</fullName>
        <columns>NAME</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Primary__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>Is_Owner_Active_User__c</columns>
        <columns>Territory_Owner_Full_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_CAN_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDH_Business__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <filters>
            <field>CDH_Primary__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Poland Primary only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Poland_not_Primary</fullName>
        <columns>NAME</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Primary__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>Is_Owner_Active_User__c</columns>
        <columns>Territory_Owner_Full_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDH_Business__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <filters>
            <field>CDH_Primary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Poland not Primary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Poland_owner_not_TD</fullName>
        <columns>NAME</columns>
        <columns>CDH_External_Territory_ID__c</columns>
        <columns>CDH_Primary__c</columns>
        <columns>CDH_Territory_Name__c</columns>
        <columns>CDH_Territory_Owner__c</columns>
        <columns>Is_Owner_Active_User__c</columns>
        <columns>Territory_Owner_Full_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDH_Business__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notContain</operation>
            <value>dusza</value>
        </filters>
        <label>All Poland owner&lt;&gt;TD</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CDHT-{000000}</displayFormat>
        <label>CDH Territory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDH Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>